--- a/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
+++ b/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
@@ -294,6 +294,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abilities\CompAbilityEffect_AnimalfeederBite.cs" />
+    <Compile Include="Abilities\Properties\CompProperties_AbilityBloodfeederBite.cs" />
+    <Compile Include="DefOfs\InternalDefOf.cs" />
+    <Compile Include="Harmony\GeneGizmo_Resource_DrawLabel.cs" />
+    <Compile Include="Harmony\GeneGizmo_Resource_GizmoOnGUI.cs" />
+    <Compile Include="Harmony\HarmonyInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
