Added rest of genes and abilities

--- a/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
+++ b/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
@@ -298,14 +298,18 @@
     <Compile Include="Abilities\CompAbilityEffect_CorpsefeederBite.cs" />
     <Compile Include="Abilities\CompAbilityEffect_Ecstasy.cs" />
     <Compile Include="Abilities\CompAbilityEffect_FilterInfection.cs" />
+    <Compile Include="Abilities\CompAbilityEffect_HeartCrush.cs" />
     <Compile Include="Abilities\CompAbilityEffect_Hemosmosis.cs" />
     <Compile Include="Abilities\CompAbilityEffect_SanguofeederBite.cs" />
+    <Compile Include="Abilities\CompAbilityEffect_ToxicCloud.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilityCorpsefeederBite.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilityEcstasy.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilityAnimalfeederBite.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilityFilterInfection.cs" />
+    <Compile Include="Abilities\Properties\CompProperties_AbilityHeartCrush.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilityHemosmosis.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilitySanguofeederBite.cs" />
+    <Compile Include="Abilities\Properties\CompProperties_AbilityToxicCloud.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenAnimal.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenCorpse.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenSanguophage.cs" />
