--- a/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
+++ b/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
@@ -315,8 +315,11 @@
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenAnimal.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenCorpse.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenSanguophage.cs" />
+    <Compile Include="Buildings\Building_Deathrest_Extender.cs" />
+    <Compile Include="Commands\Command_SingleUseAbilities.cs" />
     <Compile Include="DefExtensions\DeathrestExtension.cs" />
     <Compile Include="DefOfs\InternalDefOf.cs" />
+    <Compile Include="Defs\SingleUseAbilityDef.cs" />
     <Compile Include="GameConditions\GameCondition_BloodMoon.cs" />
     <Compile Include="GraphicsCache\GraphicsCache.cs" />
     <Compile Include="Harmony\Command_Ability_BGTexture.cs" />
@@ -333,9 +336,11 @@
     <Compile Include="MapComponents\BloodMoon_MapComponent.cs" />
     <Compile Include="MentalStateWorkers\MentalState_Hemohunter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticCollectionsClass\StaticCollectionsClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
