--- a/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
+++ b/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
@@ -343,6 +343,7 @@
     <Compile Include="Harmony\GeneResourceDrainUtility_OffsetResource.cs" />
     <Compile Include="Harmony\HarmonyInstance.cs" />
     <Compile Include="Harmony\Thing_GetFloatmenuOptions.cs" />
+    <Compile Include="IngestionOutcomeDoers\IngestionOutcomeDoer_GiveHediffToHemogenic.cs" />
     <Compile Include="IngestionOutcomeDoers\IngestionOutcomeDoer_RemoveHediffs.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_Hemohunter.cs" />
     <Compile Include="AI\JobGivers\JobGiver_Hemohunter.cs" />
