--- a/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
+++ b/1.4/Source/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage/VanillaRacesExpanded-Sanguophage.csproj
@@ -318,12 +318,14 @@
     <Compile Include="Abilities\Properties\CompProperties_AbilitySingleUse.cs" />
     <Compile Include="Abilities\Properties\CompProperties_AbilityToxicCloud.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_CarryToDraincasket.cs" />
+    <Compile Include="AI\JobDrivers\JobDriver_DrinkCorpseHemogen.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_EnterDraincasket.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenAnimal.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenCorpse.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_ExtractHemogenSanguophage.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_RefuelDraincasket.cs" />
     <Compile Include="AI\JobDrivers\JobDriver_RefuelDraincasketAtomic.cs" />
+    <Compile Include="AI\JobGivers\JobGiver_GetCorpseHemogen.cs" />
     <Compile Include="AI\WorkGivers\WorkGiver_DraincasketRefuel.cs" />
     <Compile Include="Buildings\Building_Deathrest_Extender.cs" />
     <Compile Include="Commands\Command_SingleUseAbilities.cs" />
@@ -350,6 +352,9 @@
     <Compile Include="MapComponents\BloodMoon_MapComponent.cs" />
     <Compile Include="MapComponents\Draincaskets_MapComponent.cs" />
     <Compile Include="MentalStateWorkers\MentalState_Hemohunter.cs" />
+    <Compile Include="Options\Settings.cs" />
+    <Compile Include="Options\SettingsHelper.cs" />
+    <Compile Include="Options\Settings_Controller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticCollectionsClass\StaticCollectionsClass.cs" />
     <Compile Include="Utils\DraincasketRefuelWorkGiverUtility.cs" />
